--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "viui",
   "version": "1.0.0",
   "description": "A UI framewwork based on Vue2.x",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,17 +21,22 @@
     "url": "https://github.com/watson-yan/viui/issues"
   },
   "homepage": "https://github.com/watson-yan/viui#readme",
-  "dependencies": {},
+  "dependencies": {
+    "vue": "^2.3.4"
+  },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.4",
+    "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
+    "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
     "vue-loader": "^11.3.4",
     "vue-style-loader": "^2.0.5",
-    "vue-template-compiler": "^2.2.6",
+    "vue-template-compiler": "^2.3.4",
     "webpack": "^2.6.1"
   }
 }
